課題1再提出

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             </tr>
             <tr>
               <th>お問い合わせ内容</th>
-              <td><input type="text" class="hoge" ></td>
+              <td><textarea></textarea></td>
             </tr>
             <tr>
               <th></th>
@@ -70,7 +70,7 @@
       </article>
     </div>
     <footer class="footer">
-      <p>hogehogehogehogehogehogehige2020.12.6</p>
+      <p>Copyright ©2016 DIVE INC ALL RIGHTS RESERVED</p>
     </footer>
   </div>
 </body>
